--- a/.github/workflows/test-configs.yml
+++ b/.github/workflows/test-configs.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Nix
         uses: cachix/install-nix-action@v24
         with:
-          install_url: https://releases.nixos.org/nix/nix-2.31.2+2/install
+          install_url: https://releases.nixos.org/nix/nix-2.31.2/install
           extra_nix_config: |
             experimental-features = nix-command flakes
 
