--- a/.github/workflows/test-configs.yml
+++ b/.github/workflows/test-configs.yml
@@ -18,17 +18,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Nix
-        uses: cachix/install-nix-action@v24
-        with:
-          install_url: https://releases.nixos.org/nix/nix-2.31.2/install
-          extra_nix_config: |
-            experimental-features = nix-command flakes
 
-      # Aggressively free up disk space for NixOS builds (reclaims 65-130GB)
-      # https://github.com/wimpysworld/nothing-but-nix
-      - name: Maximize disk space for Nix
-        uses: wimpysworld/nothing-but-nix@main
+      - uses: wimpysworld/nothing-but-nix@main
+
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
+
+      - name: Get Nix version
+        run: |
+          nix --version
 
       - name: Build ${{ matrix.config }} configuration
         run: |
